; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp_desc.c_valid_user_code_selector.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp_desc.c_valid_user_code_selector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64, i64 }
%struct.TYPE_5__ = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@SEL_LDT = common dso_local global i64 0, align 8
@USER_PRIV = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@GDTSZ = common dso_local global i64 0, align 8
@ACC_PL_U = common dso_local global i32 0, align 4
@USER_CS = common dso_local global i64 0, align 8
@USER64_CS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @valid_user_code_selector(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_4__, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  call void @selector_to_sel(%struct.TYPE_4__* sret %4, i64 %5)
  %6 = load i64, i64* %3, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @FALSE, align 4
  store i32 %9, i32* %2, align 4
  br label %58

10:                                               ; preds = %1
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @SEL_LDT, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %10
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @USER_PRIV, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %2, align 4
  br label %58

22:                                               ; preds = %15
  br label %56

23:                                               ; preds = %10
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @GDTSZ, align 8
  %27 = icmp slt i64 %25, %26
  br i1 %27, label %28, label %55

28:                                               ; preds = %23
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @USER_PRIV, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %55

33:                                               ; preds = %28
  %34 = load i64, i64* %3, align 8
  %35 = call %struct.TYPE_5__* @gdt_desc_p(i64 %34)
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* @ACC_PL_U, align 4
  %39 = and i32 %37, %38
  %40 = load i32, i32* @ACC_PL_U, align 4
  %41 = icmp eq i32 %39, %40
  br i1 %41, label %42, label %44

42:                                               ; preds = %33
  %43 = load i32, i32* @TRUE, align 4
  store i32 %43, i32* %2, align 4
  br label %58

44:                                               ; preds = %33
  %45 = load i64, i64* %3, align 8
  %46 = load i64, i64* @USER_CS, align 8
  %47 = icmp eq i64 %45, %46
  br i1 %47, label %52, label %48

48:                                               ; preds = %44
  %49 = load i64, i64* %3, align 8
  %50 = load i64, i64* @USER64_CS, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %54

52:                                               ; preds = %48, %44
  %53 = load i32, i32* @TRUE, align 4
  store i32 %53, i32* %2, align 4
  br label %58

54:                                               ; preds = %48
  br label %55

55:                                               ; preds = %54, %28, %23
  br label %56

56:                                               ; preds = %55, %22
  %57 = load i32, i32* @FALSE, align 4
  store i32 %57, i32* %2, align 4
  br label %58

58:                                               ; preds = %56, %52, %42, %20, %8
  %59 = load i32, i32* %2, align 4
  ret i32 %59
}

declare dso_local void @selector_to_sel(%struct.TYPE_4__* sret, i64) #1

declare dso_local %struct.TYPE_5__* @gdt_desc_p(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
